# 50ohm

./: .drone.yml  .gitignore  README.md  build.py  download.py  hello.py  latex.py  latexmkrc  main.py  pyproject.toml  requirements.txt  snippets_tmp.json
.github/workflows/: pytest-report.yml  pytest.yml  ruff.yml
api/: directus.py  download.py
assets/: latex.js  script.js  style-course.css  style-fiftyohm.css  style-slide.css
assets/antrag/: darc-antrag.css  floating-cta.js
assets/reveal.js/: package-lock.json
config/: config.json.example
data/: metadata3b.json
doc/: Slides.md
docker/: Dockerfile
docs/: builder-architecture.md
frontend/: astro.config.mjs  eslint.config.mjs  package-lock.json  package.json  prettier.config.mjs  stylelint.config.mjs
frontend/src/layouts/: BaseLayout.astro
frontend/src/pages/: index.astro
frontend/styles/: main.scss
latex/: beamerthemedarc.sty  settings-latex-slide.tex  settings.tex
renderer/: __main__.py  comment.py  dash.py  document.py  fifty_ohm_html_renderer.py  fifty_ohm_html_slide_renderer.py  fifty_ohm_latex_renderer.py  fifty_ohm_latex_slide_renderer.py  halfwidth_spaces.py  image.py  include.py  index.py  morse.py  nonbreaking_spaces.py  photo.py  picture.py  qso.py  question.py  quote.py  referenced_token.py  references.py  slide_break.py  table.py  tag.py  underline.py  unit.py
src/: build.py  config.py  download.py  edition.py  latex_slides_build.py
templates/html/: brightspot.html  brightspot_question.html  chapter.html  course_index.html  html.html  index.html  kurse-karte.html  kurse-liste.html  next_chapter.html  next_section.html  page.html  patenkarte.html  question.html  section.html  solution.html  solution_question.html
templates/slide/: help.html  next.html  question.html  slide.html  slide_index.html
test/: acceptanceTest.md  acceptanceTestSlides.html  acceptanceTestSlides.md  test_comment.py  test_dash.py  test_figure_numbering.py  test_formula.py  test_halfwidth_spaces.py  test_hierarchical_numbering.py  test_html.py  test_html_slides.py  test_include.py  test_index.py  test_morse.py  test_nonbreaking_spaces.py  test_photo.py  test_picture.py  test_qso.py  test_question.py  test_quote.py  test_references.py  test_table.py  test_tag.py  test_underline.py  test_unit.py  test_unit_token.py  util.py
