[project]
name = "50ohm-de"
version = "0.1.0"
description = "Generator für 50ohm.de, die Ausbildungsplattform des DARC e.V."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2==3.1.6",
    "joblib==1.5.1",
    "mistletoe==1.4.0",
    "requests==2.32.4",
    "tqdm==4.67.1",
    "gitpython==3.1.46",
]

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    # pycodestyle
    # Ensure PEP8-compatible code style.
    "E",
    "W",
    # pep8-naming
    # Ensure consisten, PEP8-compatible naming.
    "N",
    # Pyflakes
    # Detect common errors.
    "F",
    # pyupgrade
    # Ensure latest syntax is used (and code auto-upgraded).
    "UP",
    # flake8-bugbear
    # Catch common, but intransparent errors.
    "B",
    # isort
    # Sort imports.
    "I",
    # flake8-pytest-style
    # Ensure consistent style in unit tests.
    "PT",
    # EXPERIMENTAL: mccabe
    # Limits maximum complexity of functions via McCabe metric
    "C90",
    # ruff-specific: No unused noqa directives
    "RUF100",
    ## Write modern python code
    # Use f-strings instead of joining strings
    "FLY",
    # Check refurb rules
    "FURB",
]

[tool.pytest.ini_options]
addopts = ["--color=yes"]
markers = ["html", "latex", "slide"]

[dependency-groups]
dev = ["pytest==8.4.1", "pytest-cov==6.2.1", "ruff==0.12.2", "ty==0.0.1a13"]
